uberfire-workbench/uberfire-workbench-client-views-patternfly/src/main/resources/org/uberfire/client/views/static/uberfire-patternfly.css
/*
 *
 *  * Copyright 2012 JBoss Inc
 *  *
 *  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 *  * use this file except in compliance with the License. You may obtain a copy of
 *  * the License at
 *  *
 *  * http://www.apache.org/licenses/LICENSE-2.0
 *  *
 *  * Unless required by applicable law or agreed to in writing, software
 *  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 *  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 *  * License for the specific language governing permissions and limitations under
 *  * the License.
 *
 */

.fa-muted {
    color: #999999;
}

.fa-active {
    color: #0076b7;
}

.uf-listbar-panel {
    border: none;
}

.uf-listbar-panel .panel-body {
    padding: 0px;
}

.uf-listbar-panel .uf-listbar-panel-header {
    background-color: #FFFFFF;
    min-height: 36px;
}

.uf-listbar-panel-header .btn-toolbar {
    margin-top: -4px;
}

.uf-listbar-panel-header .dropdown-menu {
    margin-top: 4px;
}

.uf-listbar-panel-header .dropdown-menu i {
    margin-top: 4px;
}

.uf-listbar-panel-header .dropdown-menu span {
    margin-right: 15px;
}

.uf-listbar-panel-header .uf-listbar-panel-header-toolbar .dropdown > .btn {
    vertical-align: baseline;
}

.uf-listbar-panel-header-toolbar .dropdown-menu {
    min-width: 26px;
    max-width: 26px;
    text-align: center;
    margin-top: 7px;
    margin-right: -5px;
}

.uf-listbar-panel-header-toolbar .dropdown-menu > li > a {
    padding: 0px;
    height: 28px;
}

.uf-listbar-panel-header-toolbar > li > a {
    color: inherit;
}

.uf-listbar-panel-header-title {
    font-size: 16px;
    font-weight: 500;
    margin-top: -5px;
}

.uf-listbar-panel-header-title:hover,
.uf-listbar-panel-header-title:focus {
    color: inherit;
    text-decoration: none;
}

.uf-listbar-panel-header-title .caret {
    margin-left: 5px;
}

.uf-listbar-panel-header-title:hover .caret {
    color: #0076b7;
}

.uf-listbar-panel-header-title a {
    color: inherit;
}

.uf-tabbar-panel {

}

.uf-tabbar-panel-nav-tabs {
    padding-top: 1px;
}

.uf-tabbar-panel-nav-tabs .uf-activeNavTabs {

}

.uf-multitab-panel .uf-tabbar-panel-nav-tabs .active:hover a {
    cursor: move;
}

.uf-modal .modal-footer {
    margin-top: 0px;
}

.uf-drop-target-highlight {
    z-index: 100000;
    border: 2px #0076b7 solid;
    background-color: #199dde;
    opacity: 0.50;
    filter: alpha(opacity=50);
}

.uf-drop-target-compass {
    z-index: 100001;
    background-color: #fff;
    border: 1px #ddd solid;
}

.uf-drop-target-compass-centre {
    border: 1px #ddd solid;
}

.uf-drop-target-compass-west,
.uf-drop-target-compass-east {
    border-top: 1px #ddd solid;
    border-bottom: 1px #ddd solid;
}

.uf-drop-target-compass-centre > i,
.uf-drop-target-compass-west > i,
.uf-drop-target-compass-east > i {
    position: absolute;
    top: 40%;
    left: 35%;
}

.uf-drop-target-compass-north,
.uf-drop-target-compass-south {
    text-align: center;
}

.uf-list-dropdown {

}

.uf-list-dropdown-single {

}

.uf-list-dropdown-single a:hover {
    cursor: default;
}

.uf-list-dropdown-multi {

}

.uf-part-list-dropdown-selected span {
    font-weight: bold;
}

.uf-multi-page-editor .nav-tabs-pf > li:first-child > a {
    margin-left: 15px;
}

.uf-multi-page-editor .uf-tabbar-panel-nav-tabs {
    padding-top: 0px;
}

.uf-navbar-compact .uf-navbar-nav-compact > li:first-child {
    border-left: 1px solid #2b2b2b;
}

.uf-navbar-compact .uf-navbar-nav-compact > li > a {
    padding: 7px 10px 7px 10px;
}

.uf-navbar-compact .uf-navbar-nav-compact > li > a:hover {
    background-color: #1d1d1d;
    border-top-color: #5c5c5c;
    color: #cfcfcf;
    background-image: -webkit-linear-gradient(top, #363636 0%, #1d1d1d 100%);
    background-image: -o-linear-gradient(top, #363636 0%, #1d1d1d 100%);
    background-image: linear-gradient(to bottom, #363636 0%, #1d1d1d 100%);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff363636', endColorstr='#ff1d1d1d', GradientType=0);
}

.navbar-pf .navbar-brand {
    margin-right: 10px;
}

.navbar-pf .navbar-brand img {
    height: 10px;
}

.navbar-pf .navbar-utility {
    top: 1px;
}

@media (max-width: 767px) {
    .navbar-pf .navbar-header {
        float: none;
    }

}

/* Fix for modal behind backdrop. Potentially fixed by the next BS release.
   Broken in 3.3.4
   See https://github.com/twbs/bootstrap/issues/16148
 */
.modal-dialog {
    z-index: 1050;
}

.navbar-pf .navbar-nav .uf-perspective-context-menu > a {
    color: #0099d3;
}

.navbar-pf .navbar-nav .uf-perspective-context-menu.open > a,
.navbar-pf .navbar-nav .uf-perspective-context-menu > a:hover {
    color: #0076b7;
}

